syntax = "proto3";

message DemoContainer {
    repeated DemoObject objects = 1;
}

message DemoObject {
    Info info = 1;
    string name = 2;
    string type = 3;
    int32 count = 4;
}

message Info {
    string id = 1;
}

enum MyEnum {
    DEFAULT = 0;
    ENABLED = 1;
}

service DemoApi {
    rpc DoSomething(DemoObject) returns (DemoObject) {};
}